Fix u-boot 2019.10 gatesgarth integration

--- a/conf/machine/cn9132.conf
+++ b/conf/machine/cn9132.conf
@@ -38,6 +38,7 @@ UBOOT_BUILDENV_DEVICE_TREE = "cn9132-cex7-A"
 
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot"
 PREFERRED_VERSION_virtual/bootloader ?= "2019.10"
+PREFERRED_VERSION_u-boot ?= "2019.10"
 
 MACHINE_FEATURES = "rtc ext2 ext3 vfat usbhost"
 
