Change image install kernel name

--- a/conf/machine/cn9132.conf
+++ b/conf/machine/cn9132.conf
@@ -14,7 +14,7 @@ EXTRA_IMAGEDEPENDS += "\
 
 IMAGE_FSTYPES ?= "tar.gz"
 WKS_FILE ?= "cn9132-yocto.wks"
-IMAGE_INSTALL_append = " kernel-devicetree kernel-image-zimage"
+IMAGE_INSTALL_append = " kernel-devicetree kernel-image-image"
 do_image_wic[depends] += "mtools-native:do_populate_sysroot dosfstools-native:do_populate_sysroot u-boot:do_deploy"
 
 SERIAL_CONSOLES ?= "115200;ttyS0 115200;ttyO0 115200;ttyAMA0"
