Add support for multi-threaded coremark
refs #292

--- a/conf/machine/cn9132.conf
+++ b/conf/machine/cn9132.conf
@@ -41,5 +41,6 @@ PREFERRED_VERSION_virtual/bootloader ?= "2019.10"
 PREFERRED_VERSION_u-boot ?= "2019.10"
 
 MACHINE_FEATURES = "rtc ext2 ext3 vfat usbhost"
+MACHINE_THREADS = "4"
 
 IMAGE_BOOT_FILES ?= "${KERNEL_IMAGETYPE} ${UBOOT_BINARY}"
