Rename machine from cn9132 to cn9132-cex7

--- a/conf/machine/cn9132-cex7.conf
+++ b/conf/machine/cn9132-cex7.conf
@@ -26,7 +26,7 @@ PREFERRED_VERSION_linux-yocto ?= "5.8%"
 KERNEL_IMAGETYPE = "Image"
 KERNEL_DEVICETREE = "marvell/cn9132-cex7.dtb"
 KERNEL_EXTRA_ARGS += "LOADADDR=${UBOOT_ENTRYPOINT}"
-KERNEL_FEATURES += " cn9132.scc "
+KERNEL_FEATURES += " cn9132-cex7.scc "
 
 #SPL_BINARY = "MLO"
 UBOOT_SUFFIX = "bin"
