Compile for aarch64 instead of octeontx2
This produces bootable images, but we will have to find out what sideffects this has. Probably performance losses or missing features.

--- a/conf/machine/cn9132-cex7.conf
+++ b/conf/machine/cn9132-cex7.conf
@@ -3,7 +3,8 @@
 #@DESCRIPTION: Machine support for Marvell Opteon TX2 CN9132.
 #
 
-require conf/machine/include/arm/armv8-2a/tune-octeontx2.inc
+#require conf/machine/include/arm/armv8-2a/tune-octeontx2.inc
+require conf/machine/include/arm/arch-arm64.inc
 
 MACHINE_EXTRA_RRECOMMENDS = "kernel-modules kernel-devicetree"
 
