Add overlayfs suppport

--- a/recipes-kernel/linux-yocto/files/cn9132-cex7/cn9132-cex7.cfg
+++ b/recipes-kernel/linux-yocto/files/cn9132-cex7/cn9132-cex7.cfg
@@ -960,7 +960,7 @@ CONFIG_QUOTA=y
 CONFIG_AUTOFS4_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
-CONFIG_OVERLAY_FS=m
+CONFIG_OVERLAY_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_HUGETLBFS=y
 CONFIG_CONFIGFS_FS=y
