Add comment lines

--- a/conf/machine/cn9132-cex7.conf
+++ b/conf/machine/cn9132-cex7.conf
@@ -3,7 +3,11 @@
 #@DESCRIPTION: Machine support for Marvell Opteon TX2 CN9132.
 #
 
+# Static binaries throw an illegal instruction when using this machine
+# The kernel seems to work, and so do dynamically linked binaries, but
+# init can't me made to work
 #require conf/machine/include/arm/armv8-2a/tune-octeontx2.inc
+# We will use generic aarch64 instead
 require conf/machine/include/arm/arch-arm64.inc
 
 MACHINE_EXTRA_RRECOMMENDS = "kernel-modules kernel-devicetree"
