--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "meta-solidrun"
 BBFILE_PATTERN_meta-solidrun = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-solidrun = "8"
 
-LAYERSERIES_COMPAT_meta-solidrun = "gatesgarth hardknott"
+LAYERSERIES_COMPAT_meta-solidrun = "honister"
