linux-yocto: clean config warnings

--- a/recipes-kernel/linux-yocto/linux-5.15/cn913x-kmeta/cn913x_additions.config
+++ b/recipes-kernel/linux-yocto/linux-5.15/cn913x-kmeta/cn913x_additions.config
@@ -1,12 +1,16 @@
 CONFIG_NET_DSA_MV88E6XXX=m
+CONFIG_USB=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_FTDI_SIO=y
 CONFIG_USB_SERIAL_WWAN=y
 CONFIG_USB_SERIAL_OPTION=y
-CONFIG_NET_DSA=m
+CONFIG_NET_DSA=y
+CONFIG_PWM=y
 CONFIG_SENSORS_PWM_FAN=y
-CONFIG_GPIO_SYSFS=y
+CONFIG_I2C=y
+CONFIG_PHYLINK=y
 CONFIG_SFP=y
+CONFIG_PHYLIB=y
 CONFIG_MARVELL_PHY=y
 CONFIG_MARVELL_10G_PHY=y
 CONFIG_SENSORS_MCP3021=y
