Fix default u-boot environment variables

--- a/conf/machine/cn9130-cf-base.conf
+++ b/conf/machine/cn9130-cf-base.conf
@@ -35,6 +35,7 @@ KERNEL_FEATURES += " cn9130-cf-base.scc "
 UBOOT_SUFFIX = "bin"
 UBOOT_MACHINE = "sr_cn913x_cex7_defconfig"
 UBOOT_BUILDENV_DEVICE_TREE = "cn9130-cf-base"
+UBOOT_BUILDENV_RAMDISK_FNAME = "rbxos-ramdisk-${UBOOT_BUILDENV_DEVICE_TREE}.cpio.gz.u-boot"
 #UBOOT_MAKE_TARGET = "u-boot.elf"
 #UBOOT_ENTRYPOINT = "0x80000000"
 #UBOOT_LOADADDRESS = "0x080008000"
