--- a/recipes-kernel/linux-yocto/linux-5.15/cn913x-kmeta/cn913x_additions.config
+++ b/recipes-kernel/linux-yocto/linux-5.15/cn913x-kmeta/cn913x_additions.config
@@ -1194,3 +1194,5 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_FTRACE is not set
 CONFIG_MEMTEST=y
+CONFIG_ARM_ARMADA_8K_CPUFREQ=y
+
